--- a/alcs-frontend/src/app/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/card-detail-dialog/card-detail-dialog.component.html
@@ -1,37 +1,27 @@
 
-<h2 mat-dialog-title>{{data.title}}</h2>
+<div mat-dialog-title><h2>{{data.title}}</h2> in {{data.status}}</div>
 <mat-dialog-content>
-  <h4 mat-dialog-title>File: number {{data.fileNumber}}</h4>
-  <!-- <div class="view-form-container">
-    <div class="view-form-content">
-      <div class="view-form-label">File number:</div>
-      <div class="view-form-detail">
-        {{data.fileNumber}}
-      </div>
+    <h4>PAUSED</h4>
+    <div class="card-details-wrapper">
+        <div>
+            <mat-label>File number:</mat-label>
+            <p>{{data.fileNumber}}</p>
+        </div>
+        <div>
+            <mat-label>Assignee:</mat-label>
+            <p>Placeholder John</p>
+        </div>
+        <div>
+            <mat-label>Details:</mat-label>
+            <p>{{data.body}}</p>
+        </div>
     </div>
-
-  </div> -->
-  <!-- <table>
-    <tbody>
-      <tr>
-        <td>fileNumber</td>
-        <td>{{data.fileNumber}}</td>
-      </tr>
-      <tr>
-        <td>Status</td>
-        <td>{{data.status}}</td>
-      </tr>
-      <tr>
-        <td>Assignee</td>
-        <td>me</td>
-      </tr>
-      <tr>
-        <td>Details</td>
-        <td>Lorem Ipsum Delorat</td>
-      </tr>
-    </tbody>
-  </table> -->
+        <mat-divider></mat-divider>
+        <div>
+            <mat-label>Comments</mat-label>
+            <p>{{data.body}}</p>
+        </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button mat-dialog-close>Close</button>
 </mat-dialog-actions>
