Add label to application status, populate initial statuses
* Improve board styling

--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
@@ -1,11 +1,9 @@
 <div>
-  <div class="container column-headers">
-    <div *ngFor="let column of columns">
-      {{ column.name }}
-    </div>
-  </div>
   <div class="container" cdkDropListGroup>
     <div class="column" *ngFor="let column of columns">
+      <div class="column-header">
+        {{ column.name }}
+      </div>
       <div
         class="card-container"
         cdkDropList
