--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
@@ -1,15 +1,15 @@
 .container {
-  display: grid;
-  grid-column-gap: 2rem;
-  grid-auto-flow: column;
-  grid-auto-columns: minmax(0, 1fr);
+  display: flex;
+  overflow: auto;
+  min-height: 70vh;
+  margin-top: 32px;
 }
 
 .header-container {
   position: relative;
 }
 
-.column-headers {
+.column-header {
   position: sticky;
   top: 0;
   background-color: #fff;
@@ -20,6 +20,10 @@
 }
 
 .column {
+  margin: 0 16px;
+  min-width: 270px;
+  display: flex;
+  flex-direction: column;
 }
 
 .card-container {
