--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="container" cdkDropListGroup>
-    <div class="column" *ngFor="let column of columns">
+    <div class="column" [id]="'column-' + column.status" *ngFor="let column of columns">
       <div class="column-header">
         {{ column.name }}
       </div>
@@ -10,16 +10,8 @@
         (cdkDropListDropped)="drop($event, column)"
         [cdkDropListEnterPredicate]="predicateGenerator(column)"
       >
-        <mat-card
-          [id]="'card-' + card.id"
-          class="card"
-          *ngFor="let card of cards | statusfilter: column.status"
-          cdkDrag
-          [cdkDragData]="card"
-          (click)="click(card.id)"
-        >
-          {{ card.label }}
-        </mat-card>
+        <app-card [id]="'card-' + card.id" *ngFor="let card of cards | statusfilter: column.status" [cardData]="card" (cardSelected)="cardClicked($event)">
+        </app-card>
       </div>
     </div>
   </div>
