--- a/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.scss
+++ b/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.scss
@@ -11,3 +11,19 @@ div{
 .full-width {
     width: 100%;
   }
+
+.pull-right {
+  float: right;
+}
+
+.flex-container {
+  display: flex;
+  margin: 0;
+}
+
+.flex-child {
+  flex: 1 0 auto;
+  .small {
+      flex: 2 4 auto;
+  }
+}  
