--- a/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.scss
+++ b/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.scss
@@ -1,12 +1,6 @@
 div{
     margin: 10px;
 }
-
-.card-detailed-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
   
 .full-width {
     width: 100%;
@@ -27,3 +21,7 @@ div{
       flex: 2 4 auto;
   }
 }  
+
+.italic {
+  font-style: italic;
+}
