--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.html
@@ -10,7 +10,12 @@
         (cdkDropListDropped)="drop($event, column)"
         [cdkDropListEnterPredicate]="predicateGenerator(column)"
       >
-        <app-card [id]="'card-' + card.id" *ngFor="let card of cards | statusfilter: column.status" [cardData]="card" (cardSelected)="cardClicked($event)">
+        <app-card
+          [id]="'card-' + card.id"
+          *ngFor="let card of cards | statusfilter: column.status"
+          [cardData]="card"
+          (cardSelected)="cardClicked($event)"
+        >
         </app-card>
       </div>
     </div>
