--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -165,3 +165,10 @@ body {
     }
   }
 }
+
+.center {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
