Code review feedback

--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -3,7 +3,7 @@
     <div>{{ cardData.title }}</div>
     <div class="lower-card">
       <div>
-        <div class="activeDays center">
+        <div class="active-days center">
           <span class="center">{{ cardData.activeDays }}</span>
           <mat-icon title="Active Days">calendar_today</mat-icon>
         </div>
