--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -5,6 +5,10 @@
 @import 'styles/colors';
 @import 'styles/typography';
 
+// ng-select
+@import "~@ng-select/ng-select/themes/material.theme.css";
+@import 'styles/assignee.ngselect.scss';
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
@@ -165,3 +169,4 @@ body {
     }
   }
 }
+
