--- a/alcs-frontend/src/styles/assignee.ngselect.scss
+++ b/alcs-frontend/src/styles/assignee.ngselect.scss
@@ -1,5 +1,11 @@
 // Not ng-select styles must be overridden in global css
 
-.ng-select.assignee .ng-select-container .ng-value-container  {
-    margin-top: 7px;
-  }
+.ng-select.assignee .ng-select-container {
+    padding-left: 5px;
+    .ng-value-container  {
+        margin-top: 15px;
+        .ng-placeholder {
+            bottom: 10px;
+        }
+    }
+}
