--- a/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.html
@@ -1,38 +1,68 @@
 <div mat-dialog-title>
-  <h2>{{ data.title }}</h2>
-  in {{ data.status }}
+  <h2 class="card-title">{{ currentCard.title }}</h2>
+  <span>
+    in <span class="italic card-status-label">{{ currentCard.statusDetails.label }}</span>
+  </span>
+  <span class="pull-right card-state">{{ paused ? 'Paused' : 'Active' }}</span>
 </div>
 <mat-dialog-content>
-  <h4>PAUSED</h4>
-  <div class="card-details-wrapper">
-    <div>
-      <mat-label>File number:</mat-label>
-      <p>{{ data.fileNumber }}</p>
+  <div>
+    <mat-label>File number:</mat-label>
+    <p class="card-file-number">{{ currentCard.fileNumber }}</p>
+  </div>
+  <div>
+    <mat-label>Applicant:</mat-label>
+    <p class="card-applicant">Dart Placeholder</p>
+  </div>
+
+  <div>
+    <ng-select
+      class="card-assignee"
+      [items]="$users | async"
+      placeholder="Assignee"
+      bindLabel="name"
+      bindValue="name"
+      [(ngModel)]="selectedAssigneeName"
+      [searchFn]="filterAssigneeList"
+      (change)="onAssigneeSelected($event)"
+    >
+      <ng-template ng-option-tmp let-item="item" let-index="index" let-search="searchTerm">
+        <div class="assignee-card-body">
+          <p [ngOptionHighlight]="search" class="assignee-card-name">{{ item.name }}</p>
+          <p class="assignee-card-email" [ngOptionHighlight]="search" class="assignee-card-email">{{ item.email }}</p>
+        </div>
+      </ng-template>
+    </ng-select>
+  </div>
+
+  <div class="flex-container">
+    <div class="flex-child">
+      <mat-label>Active days:</mat-label>
+      <p class="card-active-days">10 Placeholder</p>
     </div>
-    <mat-form-field class="full-width" appearance="fill">
-      <mat-label>Assignee</mat-label>
-      <mat-select
-        placeholder="Select one"
-        [(value)]="selectedAssigneeEmail"
-        (selectionChange)="onAssigneeSelected($event.value)"
-      >
-        <input type="text" (keyup)="filterAssigneeList($event)" matInput placeholder="Start typing" />
-        <mat-option *ngFor="let option of filteredUsers" [value]="option.email">
-          {{ option.email }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <div>
-      <mat-label>Details:</mat-label>
-      <p>{{ data.body }}</p>
+    <div class="flex-child">
+      <mat-label>Paused days:</mat-label>
+      <p class="card-paused-days">5 Placeholder</p>
+    </div>
+    <div class="flex-chil small">
+      <mat-label></mat-label>
+      <button class="card-state-btn pull-right" (click)="onToggle()">{{ paused ? 'Activate' : 'Pause' }}</button>
     </div>
   </div>
-  <mat-divider></mat-divider>
   <div>
+    <mat-label>Details:</mat-label>
+    <p class="card-details">{{ currentCard.body }}</p>
+  </div>
+  <div>
+    <mat-divider></mat-divider>
+  </div>
+  <div class="card-comments-wrapper">
     <mat-label>Comments</mat-label>
-    <p>{{ data.body }}</p>
+    <p>Placeholder comments</p>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Close</button>
+  <div>
+    <button mat-button mat-dialog-close>Close</button>
+  </div>
 </mat-dialog-actions>
