--- a/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.scss
+++ b/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.scss
@@ -1,13 +1,37 @@
-div{
+div {
     margin: 10px;
 }
-
-.card-detailed-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
   
 .full-width {
     width: 100%;
   }
+
+.pull-right {
+  float: right;
+}
+
+.flex-container {
+  display: flex;
+  margin: 0;
+}
+
+.flex-child {
+  flex: 1 0 auto;
+  .small {
+      flex: 2 4 auto;
+  }
+}  
+
+.italic {
+  font-style: italic;
+}
+
+.card-assignee {
+  .assignee-card-name {
+    font-size: 1.2em !important;
+    font-weight: 600 !important;
+  }
+  .assignee-card-email {
+    font-size: 0.9em !important;
+  }
+}
