--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card" cdkDrag [cdkDragData]="cardData" (click)="onClick(cardData.id)">
+<mat-card class="card" [ngClass]="{'paused' : cardData.paused}" cdkDrag [cdkDragData]="cardData" (click)="onClick(cardData.id)">
   <div class="card-content">
     <div>{{ cardData.title }}</div>
     <div class="lower-card">
