Add Toast Service and hook up

--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -4,6 +4,7 @@
 // Plus imports for other components in your app.
 @import 'styles/colors';
 @import 'styles/typography';
+@import 'styles/toast';
 
 // ng-select
 @import "~@ng-select/ng-select/themes/material.theme.css";
