--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -8,7 +8,7 @@
           <mat-icon title="Active Days">calendar_today</mat-icon>
         </div>
         <div class="type">
-          <span class="center">{{ cardData.type }}</span>
+          <span class="center">{{ cardData.typeLabel }}</span>
         </div>
       </div>
       <div>
