--- a/alcs-frontend/src/app/shared/inline-edit/inline-edit.component.html
+++ b/alcs-frontend/src/app/shared/inline-edit/inline-edit.component.html
@@ -8,6 +8,7 @@
     name="value"
     #editInput
     [(ngModel)]="pendingValue"
+    (blur)="confirmEdit()"
     (keydown.enter)="confirmEdit()"
     (keydown.escape)="cancelEdit()"
   />
