--- a/alcs-frontend/src/app/shared/inline-edit/inline-edit.component.scss
+++ b/alcs-frontend/src/app/shared/inline-edit/inline-edit.component.scss
@@ -1,13 +1,14 @@
 @import '../../../styles/colors';
 
 .editable {
+  display: inline-block;
   cursor: pointer;
   background-color: #eee;
   border: 2px solid transparent;
   padding: 4px;
   margin: 4px 0;
   border-radius: 2px;
-  height: 24px;
+  font-size: 16px;
 }
 
 .editable:hover {
@@ -16,5 +17,4 @@
 
 input.mat-body.editing {
   @extend .editable;
-  font-size: 16px;
 }
