--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -8,7 +8,7 @@
 
 // ng-select
 @import "~@ng-select/ng-select/themes/material.theme.css";
-@import 'styles/assignee.ngselect.scss';
+@import 'styles/ngselect.scss';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
