--- a/alcs-frontend/src/styles/ngselect.scss
+++ b/alcs-frontend/src/styles/ngselect.scss
@@ -1,7 +1,8 @@
 // Not ng-select styles must be overridden in global css
 
 .ng-select.card-assignee .ng-select-container,
-.ng-select.card-type .ng-select-container {
+.ng-select.card-type .ng-select-container,
+.ng-select.card-decision-maker .ng-select-container {
   .ng-value-container {
     margin-top: 15px;
 
