Code Review Feedback
* Rename madeBy -> author
* Remove empty exports
* Change font size to em

--- a/alcs-frontend/src/app/shared/commenting/comment.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comment.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="comment" class="comment">
   <div class="header">
-    <div class="made-by">{{ comment.madeBy }}</div>
+    <div class="made-by">{{ comment.author }}</div>
     <div class="created-at">
       {{ commentDate }}
     </div>
