Add Region field to cards
* Move label to BaseCode and BaseCodeDto to clean things up

--- a/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/card-detail-dialog/card-detail-dialog.component.html
@@ -47,6 +47,20 @@
 
   <div>
     <ng-select
+      class="card-region"
+      [items]="regions"
+      placeholder="Region"
+      bindLabel="label"
+      bindValue="code"
+      [clearable]="false"
+      [(ngModel)]="selectedRegion"
+      (change)="onRegionSelected($event)"
+    >
+    </ng-select>
+  </div>
+
+  <div>
+    <ng-select
       class="card-assignee"
       [items]="$users | async"
       placeholder="Assignee"
