Add logout button
* Add logout button and endpoint to load it

--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -1,3 +1,6 @@
 <header>
   <h1>ALCS - Permit Tracking System</h1>
+  <div class="right">
+    <button mat-flat-button color="primary" (click)="onLogout()">Logout</button>
+  </div>
 </header>
