Prevent card from going to decision release when its paused
* Simple front end rule for now until we get more rule requirements
* Fix error toast to have dismiss button by default, change button font color to grey

--- a/alcs-frontend/src/styles/toast.scss
+++ b/alcs-frontend/src/styles/toast.scss
@@ -11,4 +11,8 @@ snack-bar-container.warning {
 snack-bar-container.error {
   background: $error-color;
   color: #fff;
+
+  .mat-simple-snackbar-action {
+    color: #ccc;
+  }
 }
