--- a/alcs-frontend/src/styles/toast.scss
+++ b/alcs-frontend/src/styles/toast.scss
@@ -11,8 +11,25 @@ snack-bar-container.warning {
 snack-bar-container.error {
   background: $error-color;
   color: #fff;
+  padding: 0;
+
+  .mat-simple-snackbar {
+    align-items: stretch;
+  }
+
+  .mat-simple-snack-bar-content {
+    border-right: 2px solid #fff;
+    padding: 14px 8px 14px 14px;
+  }
 
   .mat-simple-snackbar-action {
-    color: #ccc;
+    color: #fff;
+    padding: 0;
+    margin: 0;
+  }
+
+  button {
+    height: 100%;
+    max-height: unset;
   }
 }
