added parameter to url on card selection

--- a/alcs-frontend/src/app/shared/commenting/comment.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comment.component.html
@@ -13,6 +13,7 @@
         (cancel)="onCancel()"
         (save)="onSave($event)"
         [isEditing]="isEditing"
+        labelText="Edit comment"
       ></app-mention-textarea>
     </div>
     <div *ngIf="!isEditing" class="content" [innerHtml]="highlightMentions(comment.body)"></div>
