--- a/alcs-frontend/src/app/shared/commenting/comments.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comments.component.html
@@ -10,6 +10,7 @@
     (cancel)="onCancel()"
     [isEditing]="isEditing"
     [isNewComment]="true"
+    labelText="Add a comment"
   >
   </app-mention-textarea>
   <app-comment
