improve highlighting, tidy

--- a/alcs-frontend/src/app/shared/commenting/comments.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comments.component.html
@@ -17,7 +17,7 @@
     [comment]="comment"
     (edit)="onEditComment($event)"
     (delete)="onDeleteComment($event)"
-    [users]="users"
+    [mentions]="comment.mentions"
   ></app-comment>
 </div>
 
