--- a/alcs-frontend/src/app/shared/commenting/comments.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comments.component.html
@@ -22,6 +22,6 @@
 </div>
 
 <ng-template #mentionListTemplate let-item="item">
-  <p>{{ item.mentionName }}</p>
+  <p>{{ item.mentionLabel }}</p>
   <p>{{ item.email }}</p>
 </ng-template>
